--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -10,7 +10,7 @@
     "clx": "^1.0.0",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
